# gitfairy

./: .clippy.toml  .cspell.json  .deepsource.toml  .gitattributes  .gitignore  .gitleaks.toml  .grype.yaml  .lefthook.yml  .markdownlint-cli2.yaml  .markdownlint.yaml  .mega-linter.yml  .mise.toml  .rustfmt.toml  .windsurfrules  CONTRIBUTING.md  Cargo.toml  DOCKERFILE  LICENSE  PRIVACY  README.md  SECURITY  gitfairy.code-workspace  gitnavi.code-workspace  mise.toml  package-lock.json  package.json  pixi.toml  pnpm-lock.yaml  rust-toolchain.toml
.azure/pipelines/: azure-pipelines.yml
.circleci/: config.yml
.config/: .cspell.json  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .rustfmt.toml  tasks.js.toml  tasks.md.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: .gitignore  PULL_REQUEST_TEMPLATE.md  renovate.config.js  sync-config.yml
.github/pull_request_template/: DECISIONS_PULL_REQUEST_TEMPLATE.md
.github/workflows/: renovate.yaml  rust-lint.yml  sync.yml
.linters/: .markdownlint.yaml
.mise/: .gitignore
.mise/tasks/lint/: rustfmt.sh
.mise/tasks/lint/windows/: rustfmt.ps1
.trunk/: .gitignore  trunk.yaml
cli/: Cargo.toml
cli/src/: main.rs
docs/: .gitignore  .tasks.toml  developer-guide.md
docs/contributors/: vision.md
docs/contributors/decisions/: ADR0001-primary-programming-language.md  ADR0002-linting-and-formatting-tools.md  ADR0002-toolkit.md  ADR0005-code-signing.md  ADR0007-continuous-integration-and-deployment.md  ADR0007-doc-style.md  ADR0008-testing-strategy.md  ADR0010-uiuxstandards.md  ADR0011-security-architecture.md  ADR0012-doc-style.md  ADR0012-performance-requirements.md  ADR0013-release-management.md  ADR0014-error-handling-and-logging.md  ADR0017-performance-requirements.md  adr-0001-primary-programming-language.md  adr-0002-linting-and-formatting-tools.md  adr-0003-quality-and-testing-tools.md  adr-0004-release-management.md  adr-0005-security-vulnerability-scanning-tools.md  adr-0006-supply-chain-security-and-license-compliance.md  adr-0007-continuous-integration-and-deployment.md  adr-0008-package-management-and-documentation.md  adr-0009-workspace-management.md  adr-0010-code-signing.md  adr-0011-installers.md  adr-0012-doc-style.md  adr-0013-testing-strategy.md  adr-0014-error-handling-and-logging.md  adr-0015-uiuxstandards.md  adr-0016-security-architecture.md  adr-0017-performance-requirements.md
docs/decisions/: D0000-DecisionLogs.md  D0001-Language.md  D0003-PackageAndDocs.md  D0004-WorkspaceManagement.md  D0006-Installers.md  D0009-ErrorHandlingAndLogging.md
docs/templates/: DXXXX-DecisionTemplate.md
lib/: Cargo.toml
os/: Cargo.toml
src/cli/: .gitignore  .tasks.toml  Cargo.toml
src/cli/src/: main.rs
src/lib/: .tasks.toml  Cargo.toml
src/lib/src/: lib.rs
src/os/: .gitignore  .tasks.toml  Cargo.toml
src/ui/: .gitignore  .tasks.toml  README.md  package.json  pnpm-lock.yaml
src/ui/src/: index.html  main.js
src/ui/src-tauri/: Cargo.toml
ui/: .gitignore  Cargo.toml
ui/src-tauri/: Cargo.toml  tauri.conf.json
