[workspace]
members = ["src/lib", "src/cli", "src/ui/src-tauri", "src/os"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pierre Fouilloux", "Hibiscus Collective"]
description = "Git things done — right from the context menu. No commands, no clutter, just like magic."
license = "AGPL-3.0-or-later"
repository = "https://www.github.com/HibiscusCollective/gitfairy"

[workspace.dependencies]
libgitfairy = { path = "./src/lib" }
libgitfairy-os = { path = "./src/os", features = [] }
# External dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dev dependencies
cargo-audit = "0.21.1"
rustfmt = "1.8.0"
clippy = "1.85.0"
