[workspace]
members = ["src/lib", "src/cli", "src/ui/src-tauri", "src/os"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "Pierre Fouilloux",
    "Hibiscus Collective <collective@hibiscusgames.com>",
]
edition = "2024"
rust-version = "1.85"
description = "Generally Okay Arbitrary Type Serialization (GOATS) is tooling to generate client side serialization/deserialization logic from server side code."
documentation = "https://docs.rs/goats"
readme = "README.md"
homepage = "https://github.com/HibiscusCollective/gitfairy"
repository = "https://www.github.com/HibiscusCollective/gitfairy"
license = "AGPL-3.0-or-later"
keywords = ["contract", "schema", "code-generation", "web-programming", "api"]
exclude = ["target/", "*.log", "*.tmp"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[workspace.build]
rustflags = ["-D", "warnings"]

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
restriction = "warn"
pedantic = "warn"

[workspace.dependencies]
libgitfairy = { path = "./src/lib" }
libgitfairy-os = { path = "./src/os", features = [] }
# External dependencies
git2 = { version = "0.20.7", features = ["ssh", "https"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
