[package]
name = "gitnavi-cli"                                                                # This will be the name on crates.io
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Command-line interface for Git repository navigation and management"

[dependencies]
gitnavi = { path = "../lib", version = "0.1.0" }
clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
