[package]
name = "gitnavi-ui"                                                         # This will be the name on crates.io
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Tauri-based UI for Git repository navigation and management"

[dependencies]
gitnavi = { path = "../lib", version = "0.1.0" }
tauri = { version = "2.0.0-alpha" }
tokio.workspace = true
serde.workspace = true
