[package]
name = "gitfairy-cli"                                                               # This will be the name on crates.io
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Git repository navigation and management"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libgitfairy.workspace = true
tokio.workspace = true
