[package]
name = "gitfairy-cli"
description = "Command-line interface for Git repository navigation and management"
categories = ["command-line-utilities", "development-tools", "game-development"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[dependencies]
libgitfairy.workspace = true
## Workspace dependencies
tokio.workspace = true
## External dependencies
clap = { version = "4.4", features = ["derive"] }
config = "0.15.9"