[package]
name = "libgitfairy-os"                                                            # Not published to crates.io
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-specific installer and file manager integration for GitFairy"
publish = false                                                                   # Prevent accidental publishing

[features]
gnulinux = ["gtk", "gio"]
darwin = ["cocoa", "objc"]
win = ["windows"]

[dependencies]
## GNU/Linux
gtk = { version = "0.18", optional = true }
gio = { version = "0.20.7", optional = true }

## macOS
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2", optional = true }

## Windows
windows = { version = "0.59", optional = true }

tokio.workspace = true


