[package]
name = "gitfairy"                                                           # This will be the name on crates.io
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri-based UI for Git repository navigation and management"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitfairy_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
libgitfairy.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
clippy.workspace = true
rustfmt.workspace = true
cargo-audit.workspace = true
