[package]
name = "gitfairy"     
description = "Tauri-based UI for Git repository navigation and management"                                                      # This will be the name on crates.io
categories = ["development-tools", "game-development"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitfairy_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libgitfairy.workspace = true
## Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
## External dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
